# textypie

./: .env.example  .gitignore  LICENSE  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
app/: app.vue
app/assets/css/: tailwind.css
app/composables/: actions.ts  idStorage.ts  is-mobile.ts  modal.ts  settings-db.ts  tabs-db.ts  tabs.ts
app/layouts/: default.vue  empty.vue
app/pages/: app.vue  index.vue  settings.vue
app/plugins/: 02.monaco.ts  03.analytics.ts  is-tauri.ts
app/src/: custom-scripts.ts  schemas.ts
app/types/: index.ts
app/utils/: generate-actions.ts
docs/: custom-scripts.md  readme.md
scripts/custom/: CalculateSize.js  CreateProjectGlossaryMarkdown.js  FromUnicode.js  JoinLines.js  JoinLinesWithComma.js  JoinLinesWithSpace.js  LineComparer.js  ShuffleCharacters.js  Wadsworth.js  WkbToWkt.js  WktToWkb.js  contrastingColor.js  generateHashtag.js  listToHTMLList.js
scripts/default/: AddSlashes.js  Collapse.js  CountCharacters.js  CountLines.js  CountWords.js  Deburr.js  EvalJavascript.js  FishHexPathConverter.js  LoremIpsum.js  MarkdownQuote.js  NatSort.js  PhpUnserialize.js  RemoveDuplicates.js  RemoveSlashes.js  ReplaceSmartQuotes.js  ReverseLines.js  ReverseString.js  Rot13.js  ShuffleLines.js  Sort.js  SortJSON.js  SumAll.js  TrimEnd.js  TrimStart.js  URLDefang.js  URLRefang.js  hex2rgb.js
scripts/prebuild/: gen-default-script.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  fs.json  opener.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+86 files in other folders)
